--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>DEZ MAGAZINE</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Home.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/icon.png" type="image/png">
 
 </head>
