--- a/four.html
+++ b/four.html
@@ -14,7 +14,7 @@
         <div class="contents">
             <div class="title4">As Laranjas<br>das Laranjeiras</div>
             <div class="m-title">As Laranjas<br>das Laranjeiras</div>
-            <div class="sinopse2">Passava sempre os verões com os meus avós, no campo. Tinham algumas laranjeiras.<br>
+            <div class="sinopse2">Passava sempre as férias com os meus avós, no campo. Tinham algumas laranjeiras.<br>
                 ‘Ir apanhar laranjas’ foi sem dúvida uma das frases da minha infância.
                 Passados 20 anos, a uns meros metros de distância das laranjeiras, na mesma casa dos meus avós, no campo, existe um mini-mercado que vende laranjas.<br>
                 De repente, já ninguém pergunta se pode, educadamente, roubar laranjas das laranjeiras. As laranjeiras continuam lá.
