--- a/one.html
+++ b/one.html
@@ -14,7 +14,7 @@
         <div class="contents">
             <div class="title1">Protagonista</div>
             <div class="m-title">Protagonista</div>
-            <div class="sinopse">A seguinte série fotográfica surge como analogia ao constante protagonismo que o plástico recebe nos dias de hoje. Variados elementos são apresentados porém, o principal permanece. De forma minimalista e pouco ornamentada as imagens tendem a, por um lado, enfatizar esta constante presença no dia-a-dia, por outro, descontextualizar o elemento e simplesmente apreciá-lo sem tirar conclusões negativas.</div>
+            <div class="sinopse">A seguinte série fotográfica surge como analogia ao constante protagonismo que o plástico recebe nos dias de hoje. Variados elementos são apresentados porém, o principal permanece. De forma minimalista e pouco ornamentada as imagens tendem a, por um lado, enfatizar esta constante presença no dia-a-dia, por outro, descontextualizar o elemento e simplesmente apreciá-lo sem tirar nenhuma conclusão negativa.</div>
             <div class="imagens">
                 <img src="images/1-P/P1.jpg" class="img1-1">
                 <img src="images/1-P/P2.jpg" class="img1-2">
