--- a/six.html
+++ b/six.html
@@ -14,7 +14,7 @@
         <div class="contents">
             <div class="title6">friso</div>
             <div class="m-title">friso</div>
-            <div class="sinopse">A quantidade de plásticos que se encontram nas grandes cadeias de hipermercados é tomada como uma sátira no seguinte conjunto de imagens. As mesmas apresentam padrões impressionantemente semelhantes entre todas as fotografias. Desta forma o plástico comunica por si e leva o observador a ser bombardeado com elementos visuais que se aproximam de frisos, geométricos ou mais orgânicos, transmitindo uma quantidade absurda de plástico numa única imagem. 
+            <div class="sinopse">A quantidade de plásticos que se encontram nas grandes cadeias de hipermercados é tomada como uma sátira no seguinte conjunto de imagens. As mesmas apresentam um tipo de padrão impressionantemente semelhante entre todas as fotografias. Desta forma o plástico comunica por si e leva o observador a ser bombardeado com elementos visuais que se aproximam de frisos, geométricos ou mais orgânicos, transmitindo uma quantidade absurda de plástico numa única imagem. 
                 </div>
             <div class="imagens">
                 <img src="images/6-FR/FR1.jpg" class="img2-1">
